Done writing about parameter bounds and control model. Working on DIARC design.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -35,6 +35,7 @@
 \newcommand{\bm}[1]{\begin{bmatrix} #1 \end{bmatrix}}
 \newcommand{\lx}[2]{\leftindex #1 {#2}}
 \newcommand{\norm}[1]{\left\lvert #1 \right\rvert}
+\newcommand{\abs}[1]{\norm{#1}}
 \newcommand{\itbf}[1]{\textit{\textbf{#1}}}
 \newcommand{\mdet}[1]{\norm{\begin{matrix} #1 \end{matrix}}}
 \newcommand{\lr}[1]{\left( #1 \right)}
@@ -77,7 +78,7 @@
 \input{secs/5-control_model.tex}
 %===============================================================================
 \newpage
-\section{Adaptive Robust Control Designs}
+\section{Integrated Direct/Indirect Adaptive Robust Control Design(DIARC)}
 \input{secs/6_0-ARC_design.tex}
 %===============================================================================
 % \newpage
