--- a/secs/6_0-ARC_design.tex
+++ b/secs/6_0-ARC_design.tex
@@ -1,2 +1,14 @@
-\subsection{Direct-Indirect Adaptive Robust Control Design (DIARC)}
+We define, \itbf{Discontinuous projection mapping} $Proj()$ for a vector as follows:
+\begin{align*}
+    Proj_{\hat \theta} (\bullet) &= \bm{Proj_{\hat \theta_1}(\bullet_1), &
+                                        Proj_{\hat \theta_2}(\bullet_2), &
+                                        \hdots, &
+                                        Proj_{\hat \theta_n}(\bullet_n)}\\
+    Proj_{\hat \theta_i}(\bullet_i) &= \begin{cases}
+        0 & \text{if } \begin{cases}
+                       \end{cases}\\
+        \bullet_i & \text{otherwise}
+    \end{cases}
+\end{align*}
+
 \subsection{Adaptive Robust Control Design (ARC) with only disturbance estimation}
