--- a/secs/5-control_model.tex
+++ b/secs/5-control_model.tex
@@ -39,25 +39,148 @@ Theory (ARC) are implemented, and their performances are compared:
 
 %===============================================================================
 \subsection{Parametric model and parameter bounds for ARC design}
-From eqn.~\ref{eqn::control_form}:
-\begin{align*}
-    \dot \omega &= -\lr{\frac{C_D}{J}} \omega^2 - \lr{\frac{b_m}{J}} \omega + \lr{\frac{V_{in}^2 C_D}{J}} u + \delta v \lr{\lr{\frac{V_{in}^2 C_D}{J}} u - M_f}\\
-    \text{Let, }\qquad &\\
-    \theta_1 &= \lr{\frac{C_D}{J}} \qquad
-    \theta_2 = \lr{\frac{b_m}{J}} \\
-    \theta_u &=  \lr{\frac{V_{in}^2 C_D}{J}} \qquad
-    d(t) + \Delta(t) = \delta v \lr{\lr{\frac{V_{in}^2 C_D}{J}} u - M_f}
-\end{align*}
 
-Thus, we have the parametric control model with lumped disturbances:
-\begin{align*}
-    \dot \omega &= - \theta_1 \omega^2 - \theta_2 \omega + \theta_u u + d(t) + \Delta(t)\\
-    &= \pmb \phi(\omega)^T \pmb \theta + \theta_u u + d(t) + \Delta(t)\\
-    \text{where, } \qquad \\
-    \pmb \phi &= \bm{-\omega^2 & - \omega}\\
-    \pmb \theta &= \bm{\theta_1 & \theta_2}
-\end{align*}
+The parameter bounds are obtained from the variance of estimates and the
+maximum value of $\delta v$. For the current design $\pm 2\sigma$ bounds are
+used for each of the $\theta$'s. From experimental observations, the maximum
+supply voltage is about $16\, V$ and minimum supply voltage is close to $15\,
+V$. The average would be in the middle ($15.5\, V$). The physics dictates that
+all the physical parameters have a non-negative value. Also, the minimum value
+of $J$ is assumed to be $1/10$ of its nominal value instead of zero. This is to
+ensure that the inertia estimate would never be zero and with-in the reasonable
+limits. The following table gives the minimum, maximum and nominal values of the parameters:
 
-The parameter bounds are obtained from the variance of estimates and the maximum
-value of $\delta v$. For the current design $\pm 2\sigma$ bounds are used for
-each of the $\theta$'s.
+\begin{table}[H]
+    \centering
+    \begin{tabular}{r l r r r}
+        \hline \hline
+        Parameter & Units &Nominal & Minimum & Maximum \\ \hline \hline
+        $C_T$                   &
+        $N/(rad/s)^2$           &
+        $7.2581e-6$             &
+        $7.1690e-6$             &
+        $7.3471e-6$
+        \\
+        $C_D$                   &
+        $N.m/(rad/s)^2$         &
+        $3.6088e-8$             &
+        $3.3295e-8$             &
+        $3.8881e-8$
+
+        \\
+        $b_m$                    &
+        $N.m/(rad/s)$            &
+        $0$                      &
+        $0$                      &
+        $9.2006e-6$
+        \\
+        $M_f$                    &
+        $N.m$                    &
+        $1.3135e{-3}$            &
+        $0$                      &
+        $0.0104$
+        \\
+        $J$                      &
+        $Kg.m^2$                 &
+        $3.2238e{-6}$            &
+        $3.2238e{-7}$            &
+        $1.7234e-5$
+        \\
+        $V_{in}$                 &
+        $V$                      &
+        $15.5$                   &
+        $15$                     &
+        $16$
+        \\
+        $\delta v$               &
+                                 &
+        $0$                      &
+        $-0.2$                   &
+        $0.2$
+        \\
+        \hline \hline
+    \end{tabular}
+    \caption{Summary of parameter bounds}
+    \label{tab::parm_bounds}
+\end{table}
+
+\subsubsection{Parametric Model}
+It can be noted that the variance of $\hat J$ is substantial as compared to its
+actual value. This would propagate into the all the parameters if it is divided
+on all sides. Instead, we normalize all the coefficients with the controller
+gain to minimize the propagation of variance to the parameters. Thus,
+eqn.~\ref{eqn::control_form} becomes:
+
+\begin{align*}
+    \lr{\frac{J}{V_{in}^2 C_D}} \dot \omega + \lr{\frac{b_m}{V_{in}^2 C_D}} \omega + \lr{\frac{1}{V_{in}^2}} \omega^2  &= u + \delta v \lr{u - \frac{M_f}{V_{in}^2 C_D}}\\
+    %===
+    \text{Let, } \qquad &\\
+    \theta_1 = \lr{\frac{J}{V_{in}^2 C_D}} \qquad
+    \theta_2 &= \lr{\frac{b_m}{V_{in}^2 C_D}}\qquad
+    \theta_3 = \lr{\frac{1}{V_{in}^2}}\\
+    d(t) &= \delta v \lr{u - \frac{M_f}{V_{in}^2 C_D}}\\
+    %===
+    \implies \theta_1 \dot \omega + \theta_2 \omega + \theta_3 \omega^2 &= u + d(t)
+\end{align*}
+\begin{equation}\label{eqn::almst_ctrl_mdl}
+    \theta_1 \dot \omega = u - \theta_2 \omega - \theta_3 \omega^2 + d(t)
+\end{equation}
+
+Let, $\omega_d(t)$ be the desired trajectory that the system needs to track
+(output of $G_{ref}(s)$). Thus, the tracking error:
+\begin{align*}
+    s &= \omega - \omega_d \quad \implies \dot s = \dot \omega - \dot \omega_d
+\end{align*}
+Thus, subtracting $\theta_1 \omega_d$ on both sides of eqn.~\ref{eqn::almst_ctrl_mdl}.
+\begin{align*}
+    \theta_1 (\dot \omega - \dot \omega_d) &= u - \theta_1 \omega_d - \theta_2 \omega - \theta_3 \omega^2 + d(t)\\
+    \text{Let,} \qquad\\
+    \pmb \theta &= \bm{\theta_1 & \theta_2 & \theta_3}^T\\
+    \pmb \phi &= \bm{-\omega_d & -\omega & - \omega^2}.T\\
+    \implies \theta_1 \dot s &= u + \pmb \phi^T \pmb \theta + d(t)
+\end{align*}
+Dividing the disturbance into high-frequency component and a slowly varying
+component, let, $$d(t) = d_0 + \Delta(t)$$
+Thus we have the model for tracking error dynamics:
+\begin{equation}\label{eqn::error_dyn}
+    \theta_1 \dot s = u + \pmb \phi^T \pmb \theta + d_0 + \Delta(t)
+\end{equation}
+
+
+\subsubsection{Parameter Bounds}
+The parameter bounds for eqn.~\ref{eqn::error_dyn} are obtained from the
+parameter bounds of estimated parameters. Also,
+\begin{align*}
+    \abs{d(t)} &\leq d_M \implies \abs{d_0} \leq d_M \text{  and  } \abs{\Delta} \leq 2d_M\\
+    \text{From Table~\ref{tab::parm_bounds}} \qquad &\\
+    d_M &= \delta v_{max} \lr{u_{max} - \frac{M_{f_{min}}}{V_{in_{max}}^2 C_{D_{max}}}} \approx 900
+\end{align*}
+Similarly, we have
+\begin{table}[H]
+    \centering
+    \begin{tabular}{r l r r r}
+        \hline \hline
+        Parameter & Equation & Nominal & Minimum & Maximum\\ \hline \hline
+        $\theta_1$ &
+        $= \lr{\frac{J}{V_{in}^2 C_D}}$ &
+        $3.7183e-1$ &
+        $3.2388e-2$ &
+        $2.3005$
+        \\
+        $\theta_2$ &
+        $= \lr{\frac{b_m}{V_{in}^2 C_D}}$ &
+        $0$ &
+        $0$ &
+        $1.0794$
+        \\
+        $\theta_3$ &
+        $= \lr{\frac{1}{V_{in}^2}}$ &
+        $4.1623e-3$ &
+        $3.9062e-3$ &
+        $4.4444e-3$
+        \\
+        \hline \hline
+    \end{tabular}
+    \caption{Parameter Bounds}
+    \label{tab::parm_lims}
+\end{table}
