--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -78,7 +78,7 @@
 \input{secs/5-control_model.tex}
 %===============================================================================
 \newpage
-\section{Integrated Direct/Indirect Adaptive Robust Control Design(DIARC)}
+\section{Integrated Direct Adaptive Robust Control Design(DARC)}
 \input{secs/6_0-ARC_design.tex}
 %===============================================================================
 % \newpage
