Done with the prelimnary control design.

--- a/secs/5-control_model.tex
+++ b/secs/5-control_model.tex
@@ -150,7 +150,7 @@ Thus we have the model for tracking error dynamics:
 The parameter bounds for eqn.~\ref{eqn::error_dyn} are obtained from the
 parameter bounds of estimated parameters. Also,
 \begin{align*}
-    \abs{d(t)} &\leq d_M \implies \abs{d_0} \leq d_M \text{  and  } \abs{\Delta} \leq 2d_M\\
+    \abs{d(t)} &\leq d_M \implies \abs{d_0} \leq d_M \text{  and  } \abs{\Delta} \leq 2d_M = \Delta_M\\
     \text{From Table~\ref{tab::parm_bounds}} \qquad &\\
     d_M &= \delta v_{max} \lr{u_{max} - \frac{M_{f_{min}}}{V_{in_{max}}^2 C_{D_{max}}}} \approx 900
 \end{align*}
