--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -31,7 +31,7 @@
 % NewCommands
 \newcommand{\peq}{ \mathrel{+}= }
 \newcommand{\muleq}{ \mathrel{*}= }
-\newcommand{\sign}{ \text{sign}}
+\newcommand{\sign}{\,\text{sign}}
 \newcommand{\bm}[1]{\begin{bmatrix} #1 \end{bmatrix}}
 \newcommand{\lx}[2]{\leftindex #1 {#2}}
 \newcommand{\norm}[1]{\left\lvert #1 \right\rvert}
@@ -39,6 +39,7 @@
 \newcommand{\itbf}[1]{\textit{\textbf{#1}}}
 \newcommand{\mdet}[1]{\norm{\begin{matrix} #1 \end{matrix}}}
 \newcommand{\lr}[1]{\left( #1 \right)}
+\newcommand{\sat}{\,\text{sat}}
 
 
 
@@ -78,7 +79,7 @@
 \input{secs/5-control_model.tex}
 %===============================================================================
 \newpage
-\section{Integrated Direct Adaptive Robust Control Design(DARC)}
+\section{Direct Adaptive Robust Control Design (DARC)}
 \input{secs/6_0-ARC_design.tex}
 %===============================================================================
 % \newpage
