Done with the stability proofs and stuff. Now I have the control structure and everything required for tunning. Will do tunning and stuff after words.

--- a/secs/5-control_model.tex
+++ b/secs/5-control_model.tex
@@ -35,6 +35,7 @@ Theory (ARC) are implemented, and their performances are compared:
 \begin{enumerate}
     \item Direct/Indirect Adaptive Robust Controller (DIARC).
     \item ARC design with parameter estimation only for the disturbances(Disturbance ARC).
+    \item Feedback linearization.
 \end{enumerate}
 
 %===============================================================================
