Keeping focus of this doc on dynamics, identification and analysis and not control design.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -79,16 +79,7 @@
 \input{secs/5-control_model.tex}
 %===============================================================================
 \newpage
-\section{Direct Adaptive Robust Control Design (DARC)}
-\input{secs/6_0-ARC_design.tex}
-%===============================================================================
-% \newpage
-% \section{Disturbance Observer based Controller Designs}
-% \input{secs/7_0-DOB_design.tex}
-% %===============================================================================
-% \newpage
-% \section{Comparative Study}
-
+\input{secs/6-DigitalTwin.tex}
 %===============================================================================
 \newpage
 \section{Conclusion}
