--- a/refs.bib
+++ b/refs.bib
@@ -255,3 +255,9 @@
 }
 
 % MECC Paper References (END) %=================================================
+
+@article{PX4-autopilot-rpm,
+  title={RPM measurement in PX-4 platform: \url{https://github.com/PX4/PX4-Autopilot/blob/main/src/drivers/rpm/pcf8583/PCF8583.cpp}},
+  author={},
+  year={1997}
+}
